grid layout bug fixing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,22 @@
 /* Site wide styles */
 #root {
+  /*  */
 }
 
-.whole-page {
+.whole-page-container {
   display: grid;
-  grid-template-columns: 1fr 800px 1fr;
+  grid-template-columns: 1fr 1000px 1fr;
   grid-template-rows: 1fr;
   /* gap: 0px 0px; */
   grid-template-areas: "left main-body right";
 }
 
-/* grid-area: main-body; */
+.main-body {
+  grid-area: main-body;
+  background-color: aqua;
+  height: 800px;
+
+}
 
 body {
   margin: 0px;
